RESOLVED FIXED241456
Multisampling does not work on MTLGPUFamilyApple2 devices when using ANGLE Metal
https://bugs.webkit.org/show_bug.cgi?id=241456
Summary Multisampling does not work on MTLGPUFamilyApple2 devices when using ANGLE Metal
Kimmo Kinnunen
Reported 2022-06-09 01:08:43 PDT
Multisampling does not work on GPUFamilyApple2 devices when using ANGLE Metal Current multisample codepath uses StoreAndResolve
Attachments
Kimmo Kinnunen
Comment 1 2022-06-09 01:10:01 PDT
Kimmo Kinnunen
Comment 2 2022-06-09 01:16:48 PDT
EWS
Comment 3 2022-06-09 13:14:40 PDT
Committed r295431 (251437@main): <https://commits.webkit.org/251437@main> Reviewed commits have been landed. Closing PR #1411 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.