Cherry-pick d386d621d0d7. rdar://problem/90949957

Multisampling does not work on MTLGPUFamilyApple2 devices when using ANGLE Metal
    https://bugs.webkit.org/show_bug.cgi?id=241456
    <rdar://problem/90949957>

    Patch by Kimmo Kinnunen <kkinnunen@apple.com> on 2022-06-09
    Reviewed by Dean Jackson.

    Use OpenGL ES for WebGL for devices prior to MTLGPUFamilyApple3.
    WebGL2 already was running OpenGL ES for these devices for different reasons.

    The multisample codepath is not implemented for Apple2 which
    does not support MTLStoreActionStoreAndMultisampleResolve.

    * Source/WebCore/platform/graphics/cocoa/GraphicsContextGLCocoa.mm:
    (WebCore::platformSupportsMetal):
    (WebCore::GraphicsContextGLCocoa::platformInitializeContext):

    Canonical link: https://commits.webkit.org/251437@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295431 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.691@safari-613-branch